[tool.poetry]
name = "exchange-game"
version = "0.1.0"
description = ""
authors = ["jazzthief <mynameisyegor@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_game", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame = "^2.5.2"
pyinstaller = "^6.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
